kustomize/parlasite-ix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasite-ix
  labels:
    app: parlasite-ix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasite-ix
  template:
    metadata:
      labels:
        app: parlasite-ix
    spec:
      containers:
        - name: parlasite-ix
          image: parlasite-hrvaska
          ports:
            - containerPort: 3066
          resources:
            requests:
              memory: 75Mi
              cpu: 50m
            limits:
              memory: 75Mi
              cpu: 50m
