kustomize/parlasite-ix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlasite-ix
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 9.parlametar.hr
      secretName: parlasite-ix-tls
  rules:
    - host: 9.parlametar.hr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlasite-ix
                port:
                  number: 3066
